--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,14 @@
 .popup {
   width: 500px;
 }
+
+.spinner {
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: rgba(0, 0, 0, 0.05);
+  height: 100vw;
+  width: 100vh;
+  position: absolute;
+}
