--- a/src/App.css
+++ b/src/App.css
@@ -12,3 +12,19 @@
   width: 100vh;
   position: absolute;
 }
+
+.hide-sidebar{
+  display: block;
+}
+
+@media screen and (max-width: 600px) {
+  .hide-sidebar{
+      display:none;
+  }
+}
+
+@media screen and (min-width: 600px) {
+  .hide-sidebar{
+      display:block;
+  }
+}
